# app-store-download-count-badge-maker

./: .gitignore  README.md  config.yml  pyproject.toml  renovate.json  requirements.txt  tasks.py
.github/: dependabot.yml
.github/workflows/: lint.yml  release.yml  test.yml
maker/: appstore.py  config.py  const.py  main.py
tests/appstore/: test_app_store_connect_error.py  test_get_sales_reports_with_frequency.py  test_parse_tsv.py
tests/badge/: test_create_badge_url.py  test_download_badge.py
tests/config/: config.yml  conftest.py  dummy.p8  test_config.py  test_parse_config.py
tests/const/frequency/: test_badge_value.py  test_report_date.py
